Fonctionnement du PersonnageSeeder